# human_robot_collaborative_learning

./: CMakeLists.txt  README.md  package.xml  setup.py
config/: baseline.yaml  rl_params.yaml  robot_control_params.yaml
games_info/baseline/: CO.txt  CO_stats.txt  DE.txt  DE_stats.txt  DK.txt  DK_stats.txt  EK.txt  EK_stats.txt  EM.txt  EM_stats.txt  FD.txt  FD_stats.txt  FP.txt  FP_stats.txt  GS.txt  GS_stats.txt  IK.txt  IK_stats.txt  LP1.txt  LP1_stats.txt  LP2.txt  LP2_stats.txt  MM.txt  MM_stats.txt  NS.txt  NS_stats.txt  PI.txt  PI_stats.txt  SK.txt  SK_stats.txt
include/human_robot_collaborative_learning/: robot_control_sign.h
install_dependencies/: install.sh  requirements.txt
launch/: baseline.launch  game.launch
msg/: Score.msg
rl_models/156K_every10_100ms_thanasis_1/: actor_sac  critic_sac
rl_models/156K_every10_200ms_thanasis_1/: actor_sac  critic_sac
rl_models/28K_every10_100ms_thanasis_1/: actor_sac  critic_sac
rl_models/28K_every10_200ms_thanasis_1/: actor_sac  critic_sac
rl_models/98K_every10_uniform_200ms_DE_1/: actor_sac  critic_sac
rl_models/98K_every10_uniform_200ms_DK_no_TL_1/: actor_sac  critic_sac
rl_models/98K_every10_uniform_200ms_EK_no_TL_1/: actor_sac  critic_sac
rl_models/98K_every10_uniform_200ms_EM_1/: actor_sac  critic_sac
rl_models/expert/: critic_sac
scripts/: README.md  check_middle_point.py  game_control_sign.py  networks_discrete.py  sac_discrete_agent.py  score_visualization.py  utils.py
src/: README.md  acc_control_sign.cpp  baseline.cpp  check_acc_scaling.cpp  robot_control_sign.cpp
(+32 files in other folders)
